--- a/.htaccess
+++ b/.htaccess
@@ -3,3 +3,5 @@ RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME} !-s
 RewriteRule (.*) index.php/$1 [L]
+
+AddType image/svg+xml .svg .svgz
